# OmniCLO

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp
display/: console.hpp
docs/: MathJax-2.7.2
physics/cells/: cells.hpp  cells_base.hpp  coupler.hpp  microring.hpp  terminator.hpp  waveguide.hpp
physics/effects/: effects.hpp  effects_base.hpp  electro_optic.hpp  thermo_optic.hpp
physics/matrices/: butterfly.hpp  crossbar.hpp  dragon.hpp  fattree.hpp  fodon.hpp  matrices.hpp  matrices_base.hpp  piloss.hpp  shufflenet.hpp
problems/: optimizer.hpp
test/: test_main.cpp
